test/corpus/L1/positive/array-dynamic.st
"---
id: array-dynamic
kind: positive
phase: parse
layer: L1
spec: anexoA:array.dynamic
origin: spec-ANSI
section: array.dynamic
note: dynamic array with expression elements separated by dot
---"
{1+1. 2*3}
