test/corpus/L1/negative/exponent-malformed.st
"---
id: exponent-malformed
kind: negative
phase: lex
layer: L1
spec: anexoA:error.exponent-malformed
origin: spec-ANSI
section: error.exponent-malformed
codes: E_EXPONENT_MALFORMED
---"
1.5e+
